# ros2-assignment2

./: README.md
install/: local_setup.sh  setup.sh
install/action_service/lib/action_service/: handle_items  item_delivery_action_client  stock_checker_service_client  stock_checker_service_server
install/action_service/share/action_service/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_interfaces/include/custom_interfaces/custom_interfaces/action/: deliver_item.h
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/: check_stock.h  check_stock.hpp
install/custom_interfaces/share/custom_interfaces/: package.sh
install/custom_interfaces/share/custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  rosidl_cmake-extras.cmake
install/interfaces/share/ament_index/resource_index/parent_prefix_path/: interfaces
install/interfaces/share/interfaces/: local_setup.sh  package.sh
install/interfaces/share/interfaces/action/: DeliverItem.idl
install/interfaces/share/interfaces/cmake/: rosidl_cmake-extras.cmake
install/interfaces/share/interfaces/srv/: CheckStock.idl
log/: latest_build  latest_list
src/: CMakeLists.txt  package.xml
src/action_service/: package.xml  setup.cfg  setup.py
src/action_service/action_service/: Delivery_Action_Client.py  Stock_Checker_Client.py  handle_items.py  stock_checker.py
src/action_service/launch/: action_service.launch
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: DeliverItem.action
src/interfaces/srv/: CheckStock.srv
(+36 files in other folders)
